local_k8s/back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 2
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      containers:
        - name: back
          image: aleczheng/license-back
          ports:
            - containerPort: 8080
