local_k8s/db-mysql-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-mysql-node-port
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30036
  selector:
    component: db-mysql
