local_k8s/front-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: front
  ports:
    - port: 80
      targetPort: 80
