local_k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: front-cluster-ip
              servicePort: 80
            path: /
          - backend:
              serviceName: back-cluster-ip
              servicePort: 8080
            path: /graphql
          - backend:
              serviceName: back-cluster-ip
              servicePort: 8080
            path: /api_test
